feat(security): CORS 配置化、文档接口按 HTTP 方法鉴权、限流注解接入
- SecurityConfig：CORS 从 application.yml 读取 allowed-origins，支持环境变量覆盖
- SecurityConfig：文档接口按 HTTP 方法区分，GET 公开 / POST/PUT/DELETE 需认证
- DocumentController：类级别 @RateLimit(60次/60秒) 限流
- application.yml：新增 app.cors.allowed-origins 配置项